# cria

./: .dockerignore  .env.sample  .gitignore  .gitmodules  Cargo.toml  Dockerfile-cpu  Dockerfile-gpu  LICENSE  README.md  docker-compose.yaml
.github/workflows/: build-and-publish.yml  static-checks.yml
docker/: .env.sample  docker-compose-gpu.yaml  docker-compose.yaml
python/: langchain_openai.py  llamaindex_completion_stream.py  openai_chat_completion.py  openai_completion.py  openai_completion_stream.py  openai_embeddings.py  parallel_sse_client.py  prompt_llama2.py  requirements.txt  serve_llama.sh  sse_client.py  test_sse.py
python/bench/: llama-cpp.py  parallel_chat.py  parallel_embedding.py  parallel_sse_client.py
src/: cli.rs  config.rs  defaults.rs  infer.rs  inferer.rs  lib.rs  main.rs  routes.rs
src/routes/: chat.rs  completions.rs  embeddings.rs  mod.rs  models.rs
