[package]
name = "cria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
clap = { version = "4.3.19", features = ["derive"] }
llm = { path = "/home/amine/Documents/coding/llm/crates/llm" , features=["cublas"]}
llm-llama = "0.1.1"
rand = "0.8.5"
serde = { version = "1.0.179", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }

[profile.dev.package.ggml-sys]
opt-level = 3
