[package]
name = "cria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum = "0.6.19"
clap = { version = "4.3.19", features = ["derive"] }
futures = "0.3.28"
llm = { path = "./llm/crates/llm" }
llm-llama = "0.1.1"
rand = "0.8.5"
serde = { version = "1.0.179", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.4.0", features = ["trace"] }
uuid = { version = "1.4.1", features = ["v4"] }
# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "json",
  "time",
  "env-filter",
]}
opentelemetry = { version = "0.20.0", features = ["rt-tokio", "metrics"] }
tracing-opentelemetry = "0.20.0"
opentelemetry-zipkin = { version = "0.18.0", features = [
  "reqwest-client",
], default-features = false }
axum-tracing-opentelemetry = "0.13.1"
axum-prometheus = "0.4.0"
figment = { version = "0.10.10", features = ["env"] }

[profile.dev.package.ggml-sys]
opt-level = 3

[features]
cublas = ["llm/cublas"]
metal = ["llm/metal"]

